--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Connection String"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
